2011-12-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/Makefile.am: Add BridgeRule.h and BridgeRuleTable.h

	* testsuite/testTables.cpp: Add testBridgeRuleTable.

	* include/mcs/ID.h: Add methods to create belief literals from
	ID of beliefs.

	* include/mcs/BridgeRule.h: Add struct BridgeRule.

2011-12-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testTables.cpp: Finalize testBeliefTable.

	* testsuite/Makefile.am: Add testTables.

	* src/mcs/Makefile.am: Add new cpp files.

	* src/mcs/ID.cpp: Update print() for belief.

	* include/mcs/Makefile.am: Add new header files.

	* include/mcs/ID.h: Add Belief related stuff.

	* include/mcs/Belief.h:	Change to store kind and text.
	* include/mcs/BeliefTable.h: Likewise.

	* include/mcs/Belief.h: New file.

	* include/mcs/BeliefTable.h: Likewise.
	* include/mcs/Table.h: Likewise.
	* include/mcs/Logger.h: Likewise.
	* testsuite/testTables.cpp: Likewise.
	* src/mcs/ID.cpp: Likewise.
	* src/mcs/Logger.cpp: Likewise.
	* src/mcs/Belief.cpp: Likewise.
	* include/mcs/BridgeRule.h: Likewise.

2011-12-07  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/solver/Makefile.am: Remove comments that cause
	compiler errors.

	* include/mcs/Atoms.h: New file.
	* include/mcs/ID.h: Likewise.
	* include/mcs/Printhelpers.h: Likewise.

2011-12-06  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/solver/BaseSolverState.h: New file.
	* include/solver/InputMessage.h: Likewise.
	* include/solver/OutputMessage.h: Likewise.
	* include/solver/Makefile.am: Add new header files.

2011-11-29  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testWeakPointer.cpp: New file.
	* testsuite/Family.h: Likewise.
	* testsuite/Parent.h: Likewise.
	* testsuite/Parent.cpp: Likewise.
	* testsuite/Child.h: Likewise.
	* testsuite/Child.cpp: Likewise.
	* testsuite/Makefile.am: Add testWeakPointer.

2011-11-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/Engine.h: New file.
	* include/dmcs/Instantiator.h: Likewise.